# misis2024f-24-01-evstigneev-d-a

./: .gitignore  CMakeLists.txt  codeforces.id  complex.cpp  complex_with_alternative_input.cpp  status.md
prj.codeforces/: 0004a.cpp  0004b.cpp  0136a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0276b.cpp  0276c.cpp  0339a.cpp  0339b.cpp  0617a.cpp  0915a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1330b.cpp  1352a.cpp  1404a.cpp  1405a.cpp  1405b.cpp  1406a.cpp  1406b.cpp  1407a.cpp  1407b.cpp  1407c.cpp  1501a.cpp  1512b.cpp  1512c.cpp  1585a.cpp  1649a.cpp  1670b.cpp  1671a.cpp  1678a.cpp  1680b.cpp  1692c.cpp  1701a.cpp  1717b.cpp  1717c.cpp  1721b.cpp  (+5 more)
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp  arrayd.hpp
prj.lab/arrayt/: CMakeLists.txt  arrayt.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/queuea/: CMakeLists.txt  queue.hpp  queuea.cpp  queuea.hpp
prj.lab/queuel/: CMakeLists.txt  queuel.cpp  queuel.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayt_doctest.cpp  complex_doctest.cpp  complex_test.cpp  queuea_doctest.cpp  queuel_doctest.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
