set(CMAKE_CXX_STANDARD 20)

#task_1
add_executable(0004a 0004a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0004b 0004b.cpp)
add_executable(0276b 0276b.cpp)

#task_2
add_executable(1872a 1872a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(0276c 0276c.cpp)
#add_executable()

#task_3
add_executable(1330a 1330a.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1717c 1717c.cpp)
#add_executable()

#task_4
add_executable(1670b 1670b.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1512b 1512b.cpp)
#add_executable()

#task_5
add_executable(1873c 1873c.cpp)
add_executable(0339b 0339b.cpp)
add_executable(1873d 1873d.cpp)
#add_executable()
#add_executable()

#task_6
#add_executable()
#add_executable()

#task_7
#add_executable()
#add_executable()