set(CMAKE_CXX_STANDARD 20)

#task_1
add_executable(0004a 0004a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0004b 0004b.cpp)
add_executable(0276b 0276b.cpp)

#task_2
add_executable(1872a 1872a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(0276c 0276c.cpp)
add_executable(0339a 0339a.cpp)

#task_3
add_executable(1330a 1330a.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1717c 1717c.cpp)
add_executable(1330b 1330b.cpp)

#task_4
add_executable(1670b 1670b.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1512b 1512b.cpp)
add_executable(1405a 1405a.cpp)

#task_5
add_executable(1873c 1873c.cpp)
add_executable(0339b 0339b.cpp)
add_executable(1873d 1873d.cpp)
add_executable(1405b 1405b.cpp)
add_executable(1406a 1406a.cpp)

#task_6
add_executable(1406b 1406b.cpp)
add_executable(1407a 1407a.cpp)

#task_7
add_executable(1407b 1407b.cpp)
add_executable(1407c 1407c.cpp)

#task_test
add_executable(0915a 0915a.cpp)
add_executable(1692c 1692c.cpp)

#task_8
add_executable(0136a 0136a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(1501a 1501a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1649a 1649a.cpp)
add_executable(1671a 1671a.cpp)
add_executable(1678a 1678a.cpp)
add_executable(1680b 1680b.cpp)
add_executable(1701a 1701a.cpp)